style: fix text line spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,5 +5,5 @@
 
 body {
   font-family: 'Lato', sans-serif;
-  @apply text-sm/7 text-primary-text bg-primary-content-background;
+  @apply text-sm/6 text-primary-text bg-primary-content-background;
 }
